corregí la página

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <fieldset>
                 <legend>Ingresar usuario</legend>
                 <center>
-                    <form action="cocteles.html" method="POST">
+                    <form action="paginaWeb/cocteles.html" method="POST">
                         <label for="Nombre">Nombre: </label>
                         <input type="text" name="Nombre" required="required" /></title><br /> 
                         <label for="Contraseña">Contraseña: </label>
