--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <body>
         <div>
             <center>
-                <h1>HOLA MUNDO</h1>
-                <img src="La mejor coctera del mundo mundial.png" width="150px">
+                <img src="paginaWeb/LaMejorCocteraDelMundoMundial.png" width="150px">
             </center>
         </div>
         <br>
@@ -17,14 +16,14 @@
                 <center>
                     <form action="paginaWeb/cocteles.html" method="POST">
                         <label for="Nombre">Nombre: </label>
-                        <input type="text" name="Nombre" required="required" /></title><br />
+                        <input type="text" name="Nombre" required="required" /></title><br /> 
                         <label for="Contraseña">Contraseña: </label>
                         <input type="password" name="Contraseña" required="required" /><br />
                         <input type="submit" value="Submit" />
                     </form>
-                </center>
-            </fieldset>
-        </div>
+                </center>               
+            </fieldset>            
+        </div>        
     </body>
     <footer>
         <p>Aquí van los datos empresariales</p>
